# chactix

./: .gitignore  Cargo.toml  README.md
client/src/: App.svelte
migrations/: 281220_down.sql  281220_up.sql
src/: chatserver.rs  client.rs  db.rs  main.rs  message.rs  routes.rs  state.rs  websocket.rs
