[package]
name = "chactix"
version = "0.1.0"
authors = ["kraftwerk28 <kefirchik3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "message"
path = "src/message.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-files = "0.4"
actix-web-actors = "3"
dotenv = "*"
log = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pretty_env_logger = "*"

cursive = "0.15"
websocket = "0.24.0"
