[package]
name = "chactix"
version = "0.1.0"
authors = ["kraftwerk28 <kefirchik3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "message"
path = "src/message.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]

actix = "0.10.0"
actix-web = "3"
actix-files = "0.5"
actix-web-actors = "3"
actix-broker = "0.3.1"

dotenv = "*"
log = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pretty_env_logger = "*"
postgres = "0.19.0"
tokio = "0.2"

cursive = "0.15"
websocket = "0.24.0"
